--- a/WebDesignProject2.html
+++ b/WebDesignProject2.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legend</title>
+    <title>Quotes</title>
 </head>
 <body>
-    <h1><em>Have you heard of him!?</em></h1>
+    <h1>Here are a few of my favorite <br>quotes from literature</h1>
     
     <ul>
-        <li><em><a href="page1.html">The Man</a></em></li>
-        <li><em><a href="page2.html">The Myth</a></em></li>
-        <li><em><a href="page3.html">The Legend</a></em></li>
+        <li><em><a href="page1.html">Fyodor Dostoyevsky</a></em></li>
+        <li><em><a href="page2.html">Dumas</a></em></li>
+        <li><em><a href="page3.html">Mary Shelley</a></em></li>
     </ul>
 </body>
 </html>
